--- a/app/globals.css
+++ b/app/globals.css
@@ -235,7 +235,7 @@
 
   /* Bank Info */
   .bank-info {
-    @apply gap-[18px] flex p-4 transition-all border bg-blue-25 border-transparent;
+    @apply gap-[18px] flex p-4 transition-all border bg-teal-100 border-transparent;
   }
 
   /* Category Badge */
